2010-06-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Raise exception if a null pointer is passed to
	+stringWithUTF8String: for compatibility with OSX.

2010-06-09  David Wetzel <dave@turbocat.de>

	* Source/Additions/GSXML.m:
	check for NULL string
	stringWithUTF8String: raises on OSX if you feed it with a NULL string.
	
2010-06-09  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Check for gcrypt library for TLS
	* configure: Regenerate
	* Headers/Additions/GNUstepBase/GSConfig.h.in: Remove unused declaration
	* Source/NSProcessInfo.m: log and exit rather than raising exception on
	failure to call internal method to set up argv/envp.
	* Source/Additions/GSMime.m: Rewrite header parsing to avoid copying
	email body unnecessarily.  Also attempt to parse multipart body
	without copying too much.

2010-06-09  Yavor Doganov

	*Source/ObjectiveC2/sync.m: Fix test for defining _XOPEN_SOURCE

2010-06-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPropertyList.m: When encoding OSX binary property list,
	try to differentiate between integer and float items which have the
	same numeric value (bug #30040).

2010-06-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURL.m:
	Return nil for -path if initialised with empty string ... OSX compat.

2010-06-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFFIInvocation.m:
	Further fixup to earlier invocation breakage ... my previous attempt
	didn't cover all cases.

2010-06-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFFIInvocation.m:
	* Source/cifframe.h:
	* Source/cifframe.m:
	Removed distinction between GC and non-GC code.

2010-06-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSInvocation.h:
	* Source/GSFFIInvocation.m:
	* Source/NSInvocation.m:
	* Source/cifframe.h:
	* Source/cifframe.m:
	Rework memory management for frame used in FFI invocation so that
	the memory has a retain count and multiple invocations can use the